Major style updates and added images

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,30 @@
-$color: steelblue;
+$bgblue: #1A2B50; //primary color
+$blue: #84AFDD; //secondary color
 
 .my-flix {
-  color: $color;
+  color: $blue;
 }
+
+body {
+  background-color: $bgblue;
+  font-family: 'Spartan', sans-serif;
+  font-weight: 400;
+}
+
+h1, .h1 {
+  font-family: 'Spartan', sans-serif;
+  font-weight: 700;
+  color: $blue;
+}
+
+h2, h3, h4, h5, h6, .h2, .h3, .h4, .h5, .h6 {
+  font-family: 'Spartan', sans-serif;
+  font-weight: 600;
+}
+
+.btn-primary {
+  background-color: $blue;
+  border: $blue;
+  font-size: 14px;
+}
+
