Add profile view, update GET requests, add to director/genre views

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 $bgblue: #1A2B50; //primary color
 $blue: #84AFDD; //secondary color
+$hblue: #3d78b8; //heading color
 
 .my-flix {
   color: $blue;
