--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,5 +1,6 @@
 $bgblue: #1A2B50; //primary color
 $blue: #84AFDD; //secondary color
+$hblue: #3d78b8; //heading color
 $green: #88ad8b; //third color
 
 body {
@@ -16,4 +17,10 @@ span {
 
 img.logo {
   justify-content: center;
+}
+
+button.btn.btn-link, button.mt-4.btn.btn-primary {
+  margin-right: 20px !important;
+  padding: 10px !important;
+  margin-top: 20px !important;
 }
