--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -14,7 +14,7 @@ button.profile-btn {
 button.profile-btn:hover {
   text-decoration: none;
   background-color: white !important;
-  color: $bgblue !important;
+  color: $blue !important;
 }
 
 button.profile-btn-2 {
@@ -58,8 +58,17 @@ h4.mt-5.text-center {
 
 .profile-view_movie-card {
   height: 250px; 
+  color: black !important;
 }
 
 p.text-center.mt-3 {
   color: white;
+}
+
+button.rem-fav {
+  background-color: $blue;
+  color:white;
+  text-decoration: none;
+  font-size: 12px;
+  padding: 6px;
 }
