--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -30,7 +30,7 @@ button.profile-btn-2:hover {
   color: red;
 }
 
-h4.mt-5.text-center {
+h4.mt-4.text-center, h4.mt-5.text-center {
   color: $blue;
 }
 
@@ -56,9 +56,9 @@ h4.mt-5.text-center {
   padding-right: 30px;
 }
 
-.profile-view_movie-card {
-  height: 250px; 
-  color: black !important;
+img.card-img-top {
+  width: 75%;
+  margin: 5px;
 }
 
 p.text-center.mt-3 {
@@ -68,6 +68,14 @@ p.text-center.mt-3 {
 button.rem-fav {
   background-color: $blue;
   color:white;
+  text-decoration: none;
+  font-size: 12px;
+  padding: 6px;
+}
+
+button.rem-fav:hover {
+  color: white;
+  background-color: $bgblue;
   text-decoration: none;
   font-size: 12px;
   padding: 6px;
