Update navbar, fix profile-view

--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -9,3 +9,7 @@ label.form-label, label.form-check-label {
 img.loginicon {
   height: 200px;
 }
+
+h6.register.text-center.mt-5 {
+  color: white;
+}
